force-app/main/default/objects/Work_Schedule__c/Work_Schedule__c.object-meta.xml
<CustomObject>
    <label>Work Schedule</label>
    <nameField>
        <label>Work Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>