force-app/main/default/objects/Work_Schedule__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <label>Employee</label>
    <referenceTo>SFDC_Employee__c</referenceTo>
    <relationshipLabel>Work Schedules</relationshipLabel>
    <relationshipName>Work_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>