force-app/main/default/objects/Work_Schedule__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <defaultValue>&quot;17:00&quot;</defaultValue>
    <label>End</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_HH_mm</valueSetName>
    </valueSet>
</CustomField>