force-app/main/default/objects/Work_Schedule__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <formula>IF( ISBLANK(TEXT(End__c)), NULL, TIMEVALUE( TRIM(TEXT(End__c)) &amp; &quot;:00.000&quot; ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Time</label>
    <type>Time</type>
</CustomField>