force-app/main/default/objects/Work_Schedule__c/fields/Lunch_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Lunch_Duration_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lunch Duration (Minutes)</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>