force-app/main/default/objects/Work_Schedule__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <formula>IF( ISBLANK(TEXT(Start__c)), NULL, TIMEVALUE( TRIM(TEXT(Start__c)) &amp; &quot;:00.000&quot; ) )</formula>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>