force-app/main/default/objects/Work_Schedule__c/fields/Weekday_Number__c.field-meta.xml
<CustomField>
    <fullName>Weekday_Number__c</fullName>
    <formula>CASE(
  TEXT(Day_of_the_Week__c),
  &quot;Monday&quot;,    1,
  &quot;Tuesday&quot;,   2,
  &quot;Wednesday&quot;, 3,
  &quot;Thursday&quot;,  4,
  &quot;Friday&quot;,    5,
  &quot;Saturday&quot;,  6,
  &quot;Sunday&quot;,    7,
  0  /* default if blank/other */
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekday Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>