force-app/main/default/objects/Work_Schedule__c/fields/Work_Duration_Hours__c.field-meta.xml
<CustomField>
    <fullName>Work_Duration_Hours__c</fullName>
    <formula>ROUND(
  (
    ( End_Time__c - Start_Time__c )
    / 60000                     /* → minutes */
    - Lunch_Duration_Minutes__c /* subtract lunch */
  )
  / 60                         /* → hours */
, 2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Duration (Hours)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>