force-app/main/default/objects/Work_Schedule__c/fields/Work_Duration_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Work_Duration_Minutes__c</fullName>
    <formula>(
  ( End_Time__c - Start_Time__c ) / 60000 
  - Lunch_Duration_Minutes__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Duration (Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>